--- a/task0223.ipynb
+++ b/task0223.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -34,13 +34,13 @@
     "from splinter import Browser\n",
     "from webdriver_manager.chrome import ChromeDriverManager\n",
     "\n",
-    "browser = Browser('chrome',**executable_path,headless=False)\n",
-    "executable_path = {'executable_path':ChromeDriverManager().install()}"
+    "executable_path = {'executable_path':ChromeDriverManager().install()}\n",
+    "browser = Browser('chrome',**executable_path,headless=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +61,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,12 +83,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "#direct browser to click on link containing 'Explore' with a wait period before continuing\n",
+    "#direct browser to click on link containing 'Explore' \n",
     "browser.links.find_by_partial_text('Explore').click()\n",
     "\n",
     "# i can see the page in browser"
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,41 +108,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Top 50: Global Beats\n",
+      "Top 50: All music genres\n",
       "/discover/sets/charts-top:all-music:us\n",
       "https://i1.sndcdn.com/artworks-1Hod1KTMNrTcNumy-qzJjqw-t500x500.jpg\n",
-      "Top 50: Global Beats\n",
+      "Top 50: Hip-hop & Rap\n",
       "/discover/sets/charts-top:hiphoprap:us\n",
       "https://i1.sndcdn.com/artworks-1Hod1KTMNrTcNumy-qzJjqw-t500x500.jpg\n",
-      "Top 50: Global Beats\n",
+      "Top 50: Pop\n",
       "/discover/sets/charts-top:pop:us\n",
       "https://i1.sndcdn.com/artworks-JF6xhIxClSnO-0-t500x500.jpg\n",
-      "Top 50: Global Beats\n",
+      "Top 50: R&B & Soul\n",
       "/discover/sets/charts-top:rbsoul:us\n",
       "https://i1.sndcdn.com/artworks-9ixbhhfjgJ9wWsGI-TlItkQ-t500x500.jpg\n",
       "Top 50: Global Beats\n",
       "/discover/sets/charts-top:world:us\n",
       "https://i1.sndcdn.com/artworks-000350395503-2duk8l-t500x500.jpg\n",
-      "Top 50: Global Beats\n",
+      "New & hot: All music genres\n",
       "/discover/sets/charts-trending:all-music:us\n",
       "https://i1.sndcdn.com/artworks-AFciZ4rhEzx89Rky-pciVEw-t500x500.jpg\n",
-      "Top 50: Global Beats\n",
+      "New & hot: Hip-hop & Rap\n",
       "/discover/sets/charts-trending:hiphoprap:us\n",
       "https://i1.sndcdn.com/artworks-AFciZ4rhEzx89Rky-pciVEw-t500x500.jpg\n",
-      "Top 50: Global Beats\n",
+      "New & hot: Pop\n",
       "/discover/sets/charts-trending:pop:us\n",
       "https://i1.sndcdn.com/artworks-O0X0gzTcr8madS8e-zqkSTg-t500x500.jpg\n",
-      "Top 50: Global Beats\n",
+      "New & hot: R&B & Soul\n",
       "/discover/sets/charts-trending:rbsoul:us\n",
       "https://i1.sndcdn.com/artworks-SkihOY06tSjrsyJ5-0mpyMg-t500x500.jpg\n",
-      "Top 50: Global Beats\n",
+      "New & hot: Global Beats\n",
       "/discover/sets/charts-trending:world:us\n",
       "https://i1.sndcdn.com/artworks-dzJsp3Aon2Mdx0cY-V9FxiQ-t500x500.jpg\n"
      ]
@@ -154,7 +154,7 @@
     "for div in all_divs[:10]:\n",
     "    try:\n",
     "        chart_name = div.find('span')['aria-label']\n",
-    "        print(chart)\n",
+    "        print(chart_name)\n",
     "        \n",
     "        link = div.find('a')['href']\n",
     "        print(link)\n",
@@ -167,7 +167,7 @@
     "                      'Reference Url':link, \n",
     "                      'Image Link':image}\n",
     "\n",
-    "        new_list.append(chart_dict)\n",
+    "        new_list.append(chart_dic)\n",
     "\n",
     "    except Exception as e:\n",
     "        print(e)"
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -199,35 +199,35 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>chart_name</th>\n",
-       "      <th>reference_url</th>\n",
-       "      <th>image_link</th>\n",
+       "      <th>Chart Name</th>\n",
+       "      <th>Reference Url</th>\n",
+       "      <th>Image Link</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>Top 50: Global Beats</td>\n",
-       "      <td>/discover/sets/charts-top:world:us</td>\n",
-       "      <td>https://i1.sndcdn.com/artworks-000350395503-2d...</td>\n",
+       "      <td>Top 50: All music genres</td>\n",
+       "      <td>/discover/sets/charts-top:all-music:us</td>\n",
+       "      <td>https://i1.sndcdn.com/artworks-1Hod1KTMNrTcNum...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>Top 50: Global Beats</td>\n",
-       "      <td>/discover/sets/charts-top:world:us</td>\n",
-       "      <td>https://i1.sndcdn.com/artworks-000350395503-2d...</td>\n",
+       "      <td>Top 50: Hip-hop &amp; Rap</td>\n",
+       "      <td>/discover/sets/charts-top:hiphoprap:us</td>\n",
+       "      <td>https://i1.sndcdn.com/artworks-1Hod1KTMNrTcNum...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>Top 50: Global Beats</td>\n",
-       "      <td>/discover/sets/charts-top:world:us</td>\n",
-       "      <td>https://i1.sndcdn.com/artworks-000350395503-2d...</td>\n",
+       "      <td>Top 50: Pop</td>\n",
+       "      <td>/discover/sets/charts-top:pop:us</td>\n",
+       "      <td>https://i1.sndcdn.com/artworks-JF6xhIxClSnO-0-...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>Top 50: Global Beats</td>\n",
-       "      <td>/discover/sets/charts-top:world:us</td>\n",
-       "      <td>https://i1.sndcdn.com/artworks-000350395503-2d...</td>\n",
+       "      <td>Top 50: R&amp;B &amp; Soul</td>\n",
+       "      <td>/discover/sets/charts-top:rbsoul:us</td>\n",
+       "      <td>https://i1.sndcdn.com/artworks-9ixbhhfjgJ9wWsG...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -237,65 +237,65 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>Top 50: Global Beats</td>\n",
-       "      <td>/discover/sets/charts-top:world:us</td>\n",
-       "      <td>https://i1.sndcdn.com/artworks-000350395503-2d...</td>\n",
+       "      <td>New &amp; hot: All music genres</td>\n",
+       "      <td>/discover/sets/charts-trending:all-music:us</td>\n",
+       "      <td>https://i1.sndcdn.com/artworks-AFciZ4rhEzx89Rk...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>Top 50: Global Beats</td>\n",
-       "      <td>/discover/sets/charts-top:world:us</td>\n",
-       "      <td>https://i1.sndcdn.com/artworks-000350395503-2d...</td>\n",
+       "      <td>New &amp; hot: Hip-hop &amp; Rap</td>\n",
+       "      <td>/discover/sets/charts-trending:hiphoprap:us</td>\n",
+       "      <td>https://i1.sndcdn.com/artworks-AFciZ4rhEzx89Rk...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>Top 50: Global Beats</td>\n",
-       "      <td>/discover/sets/charts-top:world:us</td>\n",
-       "      <td>https://i1.sndcdn.com/artworks-000350395503-2d...</td>\n",
+       "      <td>New &amp; hot: Pop</td>\n",
+       "      <td>/discover/sets/charts-trending:pop:us</td>\n",
+       "      <td>https://i1.sndcdn.com/artworks-O0X0gzTcr8madS8...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>Top 50: Global Beats</td>\n",
-       "      <td>/discover/sets/charts-top:world:us</td>\n",
-       "      <td>https://i1.sndcdn.com/artworks-000350395503-2d...</td>\n",
+       "      <td>New &amp; hot: R&amp;B &amp; Soul</td>\n",
+       "      <td>/discover/sets/charts-trending:rbsoul:us</td>\n",
+       "      <td>https://i1.sndcdn.com/artworks-SkihOY06tSjrsyJ...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
-       "      <td>Top 50: Global Beats</td>\n",
-       "      <td>/discover/sets/charts-top:world:us</td>\n",
-       "      <td>https://i1.sndcdn.com/artworks-000350395503-2d...</td>\n",
+       "      <td>New &amp; hot: Global Beats</td>\n",
+       "      <td>/discover/sets/charts-trending:world:us</td>\n",
+       "      <td>https://i1.sndcdn.com/artworks-dzJsp3Aon2Mdx0c...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             chart_name                       reference_url  \\\n",
-       "0  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
-       "1  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
-       "2  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
-       "3  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
-       "4  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
-       "5  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
-       "6  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
-       "7  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
-       "8  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
-       "9  Top 50: Global Beats  /discover/sets/charts-top:world:us   \n",
+       "                    Chart Name                                Reference Url  \\\n",
+       "0     Top 50: All music genres       /discover/sets/charts-top:all-music:us   \n",
+       "1        Top 50: Hip-hop & Rap       /discover/sets/charts-top:hiphoprap:us   \n",
+       "2                  Top 50: Pop             /discover/sets/charts-top:pop:us   \n",
+       "3           Top 50: R&B & Soul          /discover/sets/charts-top:rbsoul:us   \n",
+       "4         Top 50: Global Beats           /discover/sets/charts-top:world:us   \n",
+       "5  New & hot: All music genres  /discover/sets/charts-trending:all-music:us   \n",
+       "6     New & hot: Hip-hop & Rap  /discover/sets/charts-trending:hiphoprap:us   \n",
+       "7               New & hot: Pop        /discover/sets/charts-trending:pop:us   \n",
+       "8        New & hot: R&B & Soul     /discover/sets/charts-trending:rbsoul:us   \n",
+       "9      New & hot: Global Beats      /discover/sets/charts-trending:world:us   \n",
        "\n",
-       "                                          image_link  \n",
-       "0  https://i1.sndcdn.com/artworks-000350395503-2d...  \n",
-       "1  https://i1.sndcdn.com/artworks-000350395503-2d...  \n",
-       "2  https://i1.sndcdn.com/artworks-000350395503-2d...  \n",
-       "3  https://i1.sndcdn.com/artworks-000350395503-2d...  \n",
+       "                                          Image Link  \n",
+       "0  https://i1.sndcdn.com/artworks-1Hod1KTMNrTcNum...  \n",
+       "1  https://i1.sndcdn.com/artworks-1Hod1KTMNrTcNum...  \n",
+       "2  https://i1.sndcdn.com/artworks-JF6xhIxClSnO-0-...  \n",
+       "3  https://i1.sndcdn.com/artworks-9ixbhhfjgJ9wWsG...  \n",
        "4  https://i1.sndcdn.com/artworks-000350395503-2d...  \n",
-       "5  https://i1.sndcdn.com/artworks-000350395503-2d...  \n",
-       "6  https://i1.sndcdn.com/artworks-000350395503-2d...  \n",
-       "7  https://i1.sndcdn.com/artworks-000350395503-2d...  \n",
-       "8  https://i1.sndcdn.com/artworks-000350395503-2d...  \n",
-       "9  https://i1.sndcdn.com/artworks-000350395503-2d...  "
+       "5  https://i1.sndcdn.com/artworks-AFciZ4rhEzx89Rk...  \n",
+       "6  https://i1.sndcdn.com/artworks-AFciZ4rhEzx89Rk...  \n",
+       "7  https://i1.sndcdn.com/artworks-O0X0gzTcr8madS8...  \n",
+       "8  https://i1.sndcdn.com/artworks-SkihOY06tSjrsyJ...  \n",
+       "9  https://i1.sndcdn.com/artworks-dzJsp3Aon2Mdx0c...  "
       ]
      },
-     "execution_count": 65,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
